--- a/apps/admin/src/components/panel/index.less
+++ b/apps/admin/src/components/panel/index.less
@@ -27,6 +27,15 @@
     transform: scale(0, 0);
   }
 
+  img {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+
   .resume {
     flex-grow: 1;
     text-align: center;
