feat: upgrade webpack and a bunch of loaders

--- a/apps/majiang/src/styles/main.less
+++ b/apps/majiang/src/styles/main.less
@@ -47,7 +47,7 @@ body {
     }
 
     &::after {
-      line-height: @diameter - @fontSize / 2;
+      line-height: calc(@diameter - @fontSize / 2);
       font-size: @fontSize;
       font-weight: bold;
       text-align: center;
