--- a/apps/common/src/modules/resume/index.less
+++ b/apps/common/src/modules/resume/index.less
@@ -562,7 +562,11 @@
   }
 
   @media only screen and (max-width: 700px) {
+    overflow: auto;
+
     .wrap {
+      overflow: visible;
+
       .scroll-bar {
         display: none;
       }
