feat: stories page

--- a/apps/stories/src/Home/index.less
+++ b/apps/stories/src/Home/index.less
@@ -1,3 +1,10 @@
 .home {
+  padding: 18px;
 
+  ul {
+    position: relative;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
 }
