--- a/apps/admin/src/styles/index.less
+++ b/apps/admin/src/styles/index.less
@@ -6,5 +6,5 @@ html, body {
 body {
   height: 100vh;
   background-size: cover;
-  background: url('@resources/dynamic/images/album/dragon.jpg');
+  background: url('@resources/dynamic/images/album/wallpaper.png');
 }
