--- a/apps/common/src/styles/index.less
+++ b/apps/common/src/styles/index.less
@@ -1,4 +1,6 @@
 html, body {
+  width: 100%;
+  position: relative;
   margin: 0;
   padding: 0;
 }
@@ -8,6 +10,11 @@ html {
 }
 
 h2 {
+  margin: 0;
+}
+
+ul {
+  padding: 0;
   margin: 0;
 }
 
