--- a/apps/stories/src/Home/ArticleItem/index.less
+++ b/apps/stories/src/Home/ArticleItem/index.less
@@ -1,14 +1,30 @@
 .article-item {
-  display: inline-block;
-  padding: 10px;
-  box-shadow: 1px 1px 18px 2px #000;
+  display: block;
+  padding: 6px;
+  box-shadow: 1px 1px 20px 2px rgba(0, 0, 0, 0.6);
   position: relative;
   box-sizing: border-box;
   border-radius: 8px;
-  width: 300px;
+  position: absolute;
+  cursor: pointer;
+  transition: width 0.3s ease, height 0.3s ease, left 0.3s ease, top 0.3s ease;
+  background-color: #fff;
   
   .pic {
     background-size: cover;
     width: 100%;
+    transition: width 0.3s ease, height 0.3s ease;
+  }
+
+  p {
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    height: 20px;
+    line-height: 20px;
+    margin: 16px 0;
+    font-size: 16px;
+    transition: width 0.3s ease, margin-bottom 0.3s ease, margin-top 0.3s ease, font-size 0.3s ease;
   }
 }
