--- a/apps/admin/src/styles/index.less
+++ b/apps/admin/src/styles/index.less
@@ -5,6 +5,5 @@ html, body {
 
 body {
   height: 100vh;
-  background-size: cover;
-  background: url('@resources/dynamic/images/album/wallpaper.png');
+  background-color: #000;
 }
