--- a/apps/common/src/modules/audio/index.less
+++ b/apps/common/src/modules/audio/index.less
@@ -29,6 +29,7 @@
   }
 
   .play-button {
+    font-size: 8px;
     position: absolute;
     top: calc(50% - 0.8em);
     left: -4.9em;
@@ -60,7 +61,7 @@
 
   .lock {
     position: absolute;
-    bottom: calc(50% - 0.7em);
+    bottom: calc(50% - 0.6em);
     right: -3.2em;
     font-size: 1.5em;
     font-weight: bold;
@@ -87,7 +88,7 @@
 
     .lock {
       opacity: 1;
-      right: -2em;
+      right: -1.8em;
     }
 
     .play-button {
