--- a/apps/common/src/modules/resume/index.less
+++ b/apps/common/src/modules/resume/index.less
@@ -564,6 +564,12 @@
   @media only screen and (max-width: 700px) {
     overflow: auto;
 
+    .panel {
+      left: 0;
+      width: 100%;
+      box-sizing: border-box;
+    }
+
     .wrap {
       overflow: visible;
 
