--- a/apps/intro/src/styles/index.less
+++ b/apps/intro/src/styles/index.less
@@ -84,6 +84,10 @@ html {
           .resume {
             display: none;
           }
+
+          .admin {
+            display: none;
+          }
         }
       }
 
@@ -105,8 +109,7 @@ html {
         #about {
           height: 100vh;
           overflow-y: auto;
-          background: url('@resources/static/mobile/poem.jpg');
-          background-size: cover;
+          background: none;
 
           .why {
             @color: rgba(255, 255, 255, 1);
@@ -127,6 +130,10 @@ html {
             }
 
             .resume {
+              display: block;
+            }
+
+            .admin {
               display: block;
             }
           }
