--- a/apps/admin/src/components/panel/index.less
+++ b/apps/admin/src/components/panel/index.less
@@ -1,30 +1,24 @@
-@keyframes floating {
-  0% {
-    transform: perspective(400px) translateZ(-60px);
-  }
-
-  50% {
-    transform: perspective(400px) translateZ(60px);
-  }
-
-  100% {
-    transform: perspective(400px) translateZ(-60px);
-  }
-}
-
 #panel {
+  @padding: 12px;
+  @boxShadow: inset 3px 3px 12px 3px rgba(0, 0, 0, 1);
+  @borderRadius: 6px;
   @duration: 0.5s;
+  @background: rgb(78, 168, 241);
   display: none;
-  padding: 66px;
+  padding: 12px;
   transition: transform @duration ease;
   flex-wrap: wrap;
 
   &.show {
-    transform: scale(1, 1);
+    transform: translateY(0);
   }
 
   &.hide {
-    transform: scale(0, 0);
+    transform: translateY(-2000px);
+  }
+
+  &>div {
+    margin: 16px 0;
   }
 
   img {
@@ -36,55 +30,43 @@
     user-select: none;
   }
 
+  .wrap {
+    background-color: @background;
+    padding: @padding;
+    cursor: pointer;
+    border-radius: @borderRadius;
+    box-shadow: @boxShadow;
+
+    &:hover {
+      box-shadow: 3px 3px 12px 3px rgba(0, 0, 0, 1);
+    }
+
+    img {
+      width: 100%;
+    }
+  }
+
   .resume {
     flex-grow: 1;
     text-align: center;
-    transform: rotate(-30deg);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-    img {
-      width: 150px;
-      cursor: pointer;
-      animation: floating 0.8s linear infinite;
-      border-radius: 6px;
-      border: 1px solid rgb(29, 54, 99);
-      box-shadow: 2px 3px 6px 1px #08283a;
-      display: inline-block;
-      width: 150px;
-
-      &:hover {
-        animation: none;
-      }
-
-      &:active {
-        animation: none;
-        box-shadow: none;
-        transform: perspective(400px) translateZ(-6px);
-        transition: box-shadow 0.1s ease, transform 0.1s ease;
-      }
+    .wrap {
+      width: 108px;
     }
   }
 
   .logout {
     flex-grow: 1;
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-    img {
-      cursor: pointer;
-      width: 150px;
-      animation: floating 0.8s linear infinite;
-      animation-delay: 0.3s;
-      box-shadow: 2px 3px 6px 1px #08283a;
-
-      &:hover {
-        animation: none;
-      }
-
-      &:active {
-        animation: none;
-        box-shadow: none;
-        transform: perspective(400px) translateZ(-6px);
-        transition: box-shadow 0.1s ease, transform 0.1s ease;
-      }
+    .wrap {
+      width: 106px;
     }
   }
 }
