feat: cat, stories page background, a few improvements

--- a/apps/admin/src/components/panel/index.less
+++ b/apps/admin/src/components/panel/index.less
@@ -1,6 +1,6 @@
 #panel {
   @padding: 12px;
-  @boxShadow: inset 3px 3px 12px 3px rgba(0, 0, 0, 1);
+  @boxShadow: inset 3px 3px 12px 3px rgb(39, 34, 34);
   @borderRadius: 6px;
   @duration: 0.5s;
   @background: rgb(78, 168, 241);
@@ -38,7 +38,7 @@
     box-shadow: @boxShadow;
 
     &:hover {
-      box-shadow: 3px 3px 12px 3px rgba(0, 0, 0, 1);
+      box-shadow: 3px 3px 12px 3px rgb(29, 27, 27);
     }
 
     img {
