feat: a few improvements

--- a/apps/common/src/modules/crystal/index.less
+++ b/apps/common/src/modules/crystal/index.less
@@ -164,13 +164,15 @@
   left: 0.5em;
 }
 
+@shadow: 1em 1.2em 3em 0 rgba(255, 255, 255, 0.8) inset;
+
 #crystal .middle div {
   position: absolute;
   height: 21.4em;
   left: -0.2em;
   top: 0;
   width: 21.4em;
-  box-shadow: 1.4em 1.8em 10em 0 rgba(255, 255, 255, 1) inset;
+  box-shadow: @shadow;
   border-radius: 10.7em;
 }
 
@@ -180,7 +182,7 @@
   left: -0.2em;
   top: 0;
   width: 14.4em;
-  box-shadow: 1.4em 1.8em 10em 0 rgba(255, 255, 255, 1) inset;
+  box-shadow: @shadow;
   border-radius: 7.2em;
 }
 
@@ -190,7 +192,7 @@
   left: -0.2em;
   top: 0;
   width: 14.4em;
-  box-shadow: 1.4em 1.8em 10em 0 rgba(255, 255, 255, 1) inset;
+  box-shadow: @shadow;
   border-radius: 7.2em;
 }
 
