feat: stories page sliding effects

--- a/apps/stories/src/Album/Menu/index.less
+++ b/apps/stories/src/Album/Menu/index.less
@@ -1,8 +1,8 @@
-.home-menu {
+.album-menu {
   position: relative;
   width: 100%;
   max-width: 1200px;
-  margin: 25px auto 36px;
+  margin: 0 auto 36px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -23,15 +23,16 @@
   }
 
   .title {
+    font-weight: 400;
     margin-right: 8px;
     padding: 6px 0;
-    color: #fff;
+    color: rgb(0, 0, 0);
     white-space: nowrap;
   }
 
   .bar {
     position: relative;
-    background-color: #fff;
+    background-color: rgba(0, 0, 0, 0.5);
     width: 200px;
     height: 3px;
     cursor: pointer;
