--- a/apps/stories/src/Home/index.less
+++ b/apps/stories/src/Home/index.less
@@ -1,10 +1,4 @@
 .home {
   padding: 18px;
-
-  ul {
-    position: relative;
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-  }
+  background-color: rgba(127, 255, 212, 0.8);
 }
