--- a/apps/intro/src/styles/index.less
+++ b/apps/intro/src/styles/index.less
@@ -50,7 +50,7 @@ html {
         width: 100%;
 
         .profile {
-          @l: 100px;
+          @l: 120px;
           width: @l;
           height: @l;
           border-radius: 100%;
@@ -58,6 +58,7 @@ html {
           background-image: url('@resources/dynamic/images/profile/cangxing.jpg');
           background-size: cover;
           margin: 0 auto 40px;
+          box-shadow: 3px 3px 6px 2px #666;
         }
 
         .why {
