--- a/apps/stories/src/Header/index.less
+++ b/apps/stories/src/Header/index.less
@@ -21,6 +21,13 @@
   background-image: url('@resources/static/materials/header_background.jpg');
   background-size: cover;
 
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
   @media only screen and (max-width: 700px) {
     padding: 25px 6px 0;
 
@@ -32,7 +39,7 @@
   .main {
     position: absolute;
     left: 12px;
-    top: 12px;
+    top: 8px;
 
     img {
       width: 30px;
