--- a/apps/common/src/styles/index.less
+++ b/apps/common/src/styles/index.less
@@ -7,6 +7,7 @@ html, body {
 
 html {
   font-size: 16px;
+  font-family: 'Times New Roman', Times, serif, '宋体', SimSum;
 }
 
 h2 {
@@ -22,12 +23,4 @@ li {
   text-decoration: none;
   padding: 0;
   margin: 0;
-}
-
-.hide {
-  display: none;
-}
-
-.show {
-  display: block;
 }
