feat: add icon for a few extensions, fix message

--- a/apps/intro/src/styles/index.less
+++ b/apps/intro/src/styles/index.less
@@ -58,7 +58,7 @@ html {
           background-image: url('@resources/dynamic/images/profile/cangxing.jpg');
           background-size: cover;
           margin: 0 auto 40px;
-          box-shadow: 3px 3px 6px 2px #666;
+          box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.6);
         }
 
         .why {
@@ -132,6 +132,7 @@ html {
             color: rgba(255, 255, 255, 0.6);
             line-height: 25px;
             font-size: 18px;
+            text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.9);
 
             &>div {
               background: linear-gradient(-30deg, rgba(255, 255, 255, 0) 25%, @color 40%, @color 45%, rgba(255, 255, 255, 0) 75%, rgba(255, 255, 255, 0) 100%) -2000px 0px no-repeat;
