--- a/apps/stories/src/Home/index.less
+++ b/apps/stories/src/Home/index.less
@@ -7,7 +7,8 @@
   aside, main {
     box-sizing: border-box;
     padding: 12px;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(0, 0, 0, 0.6);
+    color: #fff;
   }
 
   aside {
@@ -17,7 +18,7 @@
     text-indent: 32px;
 
     a {
-      color: rgb(7, 128, 87);
+      color: rgb(79, 206, 164);
     }
 
     p {
@@ -38,7 +39,7 @@
     position: relative;
   }
 
-  @media only screen and (max-width: 700px) {
+  @media only screen and (max-width: 1000px) {
     flex-direction: column;
 
     aside, main {
