feat: articles page

--- a/apps/stories/src/Album/Menu/index.less
+++ b/apps/stories/src/Album/Menu/index.less
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  padding: 8px;
+  padding: 8px 16px;
   flex-wrap: wrap;
   box-sizing: border-box;
 
