--- a/apps/stories/src/Root.less
+++ b/apps/stories/src/Root.less
@@ -3,4 +3,29 @@
   z-index: 100;
   height: 100vh;
   overflow-x: hidden;
+
+  ::-webkit-scrollbar-thumb {
+    border-radius: 0;
+    background: rgba(0, 0, 0, 0.3);
+    transition: all 0.2s;
+    border-radius: 6px;
+  }
+
+  ::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+    background: rgba(245, 245, 245, 0.5);
+  }
+
+  ::-webkit-scrollbar-track {
+    border-radius: 0;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(0, 0, 0, 0.6);
+  }
+
+  .el-loading-parent--relative {
+    position: initial !important;
+  }
 }
