--- a/apps/stories/src/Home/SourceCode/Code/index.less
+++ b/apps/stories/src/Home/SourceCode/Code/index.less
@@ -3,6 +3,7 @@
 
   code {
     background-color: transparent;
-    padding: 0 16px 0 0!important;
+    padding: 0 16px 0 0 !important;
+    overflow-x: visible !important;
   }
 }
