--- a/apps/stories/src/Root.less
+++ b/apps/stories/src/Root.less
@@ -3,29 +3,20 @@
   z-index: 100;
   height: 100vh;
   overflow-x: hidden;
+  overflow-y: scroll;
 
-  ::-webkit-scrollbar-thumb {
-    border-radius: 0;
-    background: rgba(0, 0, 0, 0.3);
-    transition: all 0.2s;
-    border-radius: 6px;
-  }
+  #footer {
+    box-sizing: border-box;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 8px;
+    text-align: right;
+    background-color: rgb(39, 39, 39);
+    font-size: 15px;
 
-  ::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-    background: rgba(245, 245, 245, 0.5);
-  }
-
-  ::-webkit-scrollbar-track {
-    border-radius: 0;
-  }
-
-  ::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(0, 0, 0, 0.6);
-  }
-
-  .el-loading-parent--relative {
-    position: initial !important;
+    a {
+      color: rgba(255, 255, 255, 0.8);
+      text-decoration: none;
+    }
   }
 }
