--- a/apps/stories/src/Articles/index.less
+++ b/apps/stories/src/Articles/index.less
@@ -1,4 +1,8 @@
 .articles {
   padding: 18px;
   background-color: rgba(127, 255, 212, 0.8);
+
+  @media only screen and (max-width: 700px) {
+    padding: 6px;
+  }
 }
