--- a/apps/stories/src/Home/index.less
+++ b/apps/stories/src/Home/index.less
@@ -4,6 +4,10 @@
   display: flex;
   color:rgba(0, 0, 0, 0.8);
 
+  @media only screen and (max-width: 700px) {
+    padding: 6px;
+  }
+
   aside, main {
     box-sizing: border-box;
     padding: 12px;
