--- a/apps/common/src/styles/index.less
+++ b/apps/common/src/styles/index.less
@@ -25,29 +25,31 @@ li {
   margin: 0;
 }
 
-// scrollbar
-::-webkit-scrollbar-thumb {
-  border-radius: 0;
-  background: rgba(0, 0, 0, 0.3);
-  transition: all 0.2s;
-  border-radius: 6px;
-}
-
-::-webkit-scrollbar {
-  width: 8px;
-  height: 8px;
-  background: rgba(245, 245, 245, 0.5);
-}
-
-::-webkit-scrollbar-track {
-  border-radius: 0;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(0, 0, 0, 0.6);
-}
-
-.el-loading-parent--relative {
-  position: initial !important;
+@media only screen and (min-width: 700px) {
+  // scrollbar
+  ::-webkit-scrollbar-thumb {
+    border-radius: 0;
+    background: rgba(0, 0, 0, 0.3);
+    transition: all 0.2s;
+    border-radius: 6px;
+  }
+  
+  ::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+    background: rgba(245, 245, 245, 0.5);
+  }
+  
+  ::-webkit-scrollbar-track {
+    border-radius: 0;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(0, 0, 0, 0.6);
+  }
+  
+  .el-loading-parent--relative {
+    position: initial !important;
+  }
 }
 
