--- a/apps/common/src/styles/index.less
+++ b/apps/common/src/styles/index.less
@@ -26,7 +26,7 @@ li {
 }
 
 @media only screen and (min-width: 700px) {
-  // scrollbar
+  // chrome scrollbar
   ::-webkit-scrollbar-thumb {
     border-radius: 0;
     background: rgba(0, 0, 0, 0.3);
@@ -50,6 +50,16 @@ li {
   
   .el-loading-parent--relative {
     position: initial !important;
+  }
+  
+  // firefox scrollbar
+  * {
+    scrollbar-color:rgba(0, 0, 0, 0.3) rgba(245, 245, 245, 0.5);
+    scrollbar-width:thin;
+
+    &:hover {
+      scrollbar-color:rgba(0, 0, 0, 0.6) rgba(245, 245, 245, 0.5);
+    }
   }
 }
 
