--- a/apps/stories/src/Album/index.less
+++ b/apps/stories/src/Album/index.less
@@ -1,5 +1,6 @@
 .album {
   background-color: rgba(127, 214, 255, 0.8);
+  padding-top: 8px;
 
   -webkit-touch-callout: none;
   -webkit-user-select: none;
