feat: merge sort visualization

--- a/apps/stories/src/Articles/Article/index.less
+++ b/apps/stories/src/Articles/Article/index.less
@@ -7,6 +7,13 @@
   display: flex;
   margin-bottom: 1.6em;
 
+  &:hover {
+    cursor: pointer;
+    transition: color 0.2s ease, background-color 0.2s ease;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: whitesmoke;
+  }
+
   .thumbnail {
     max-width: 20em;
     min-width: 20em;
