--- a/apps/common/src/styles/index.less
+++ b/apps/common/src/styles/index.less
@@ -10,8 +10,12 @@ html {
   font-family: 'Times New Roman', Times, serif, '宋体', SimSum;
 }
 
-h2 {
-  margin: 0;
+h1, h2, h3 {
+  margin: 0 0 16px;
+}
+
+p {
+  margin: 16px 0;
 }
 
 ul {
