--- a/apps/stories/src/Visualization/index.less
+++ b/apps/stories/src/Visualization/index.less
@@ -1,5 +1,8 @@
 .visualization {
   padding: 18px;
-  // height: 800px;
   background-color: rgba(231, 133, 67, 0.8);
+
+  @media only screen and (max-width: 700px) {
+    padding: 6px;
+  }
 }
