feat: sort panel, merge sort, improve souce code component, and ajax timeout error catch

--- a/apps/stories/src/utils/Loading/index.less
+++ b/apps/stories/src/utils/Loading/index.less
@@ -10,8 +10,10 @@
 
 .atat-loading {
   position: relative;
-  max-width: 800px;
+  padding: 8px;
+  width: 100%;
   margin: 0 auto;
+  box-sizing: border-box;
 
   div {
     border-radius: 3px;
