--- a/apps/common/src/styles/index.less
+++ b/apps/common/src/styles/index.less
@@ -29,6 +29,11 @@ li {
   margin: 0;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 @media only screen and (min-width: 700px) {
   // chrome scrollbar
   ::-webkit-scrollbar-thumb {
