--- a/apps/stories/src/Visualization/index.less
+++ b/apps/stories/src/Visualization/index.less
@@ -2,6 +2,12 @@
   padding: 18px;
   background-color: rgba(231, 133, 67, 0.8);
 
+  .source-code-wrap {
+    margin-top: 12px;
+    padding: 6px;
+    background-color: rgba(0, 0, 0, 0.6);
+  }
+
   @media only screen and (max-width: 700px) {
     padding: 6px;
   }
