feat: bubble sort

--- a/apps/stories/src/Visualization/SortPanel/index.less
+++ b/apps/stories/src/Visualization/SortPanel/index.less
@@ -99,6 +99,10 @@
       &.pointer2 {
         background-color: rgb(128, 5, 139);
       }
+
+      &.pointer3 {
+        background-color: rgb(0, 255, 85);
+      }
     }
   }
 }
