--- a/apps/stories/src/Visualization/SortPanel/index.less
+++ b/apps/stories/src/Visualization/SortPanel/index.less
@@ -103,6 +103,10 @@
       &.pointer3 {
         background-color: rgb(0, 255, 85);
       }
+
+      &:hover {
+        background-color: #fff;
+      }
     }
   }
 }
